cli/tests/ui/parse_unclosed_string.stderr
Error: manifest::json5_error

  × check failed
  ╰─▶ json5 parse error: unterminated string (missing closing quote)
   ╭─[<CARGO_MANIFEST_DIR>/tests/ui/parse_unclosed_string.json5:2:21]
 1 │ {
 2 │   manifest_version: "0.1.0,
   ·                     ┬
   ·                     ╰── unterminated string (missing closing quote)
 3 │   components: {
   ╰────

